--- a/Pages/Fetch_App.razor
+++ b/Pages/Fetch_App.razor
@@ -40,7 +40,7 @@ else
                                 @foreach (var detail in detailsNodeBySeverity[item.severity])
                                 {
                                     <tr>
-                                        <td>@detail.nodeName</td>
+                                        <td><a href=@(solarWindsLink+detail.detailsUrl) class="link" style="text-decoration: none">@detail.nodeName</a></td>
                                         <td>@detail.codeClient</td>
                                         <td>@detail.codeCS</td>
                                     </tr>
@@ -57,11 +57,11 @@ else
         <ul class="list-group list-group">
             @foreach (var item in hardwareInfoByNode)
             {
-                <li class="list-group-item list-group-item-primary">Hardware alert on @item[1] : <em>@item[2]</em></li>
+                <a href="@(solarWindsLink+item.detailsUrl)" class="list-group-item list-group-item-action list-group-item-primary" style="text-decoration: none;">Hardware alert on @item.nodeName : <em>@item.alertMessage</em></a>
                 <li class="list-group-item" style="text-align:center">@foreach (var category in
-            categoryByHardwareInfo[(int)@item[0]])
+            categoryByHardwareInfo[item.hardwareInfoID])
                     {
-                        @category <span>&nbsp</span>}</li>
+                        @category.categoryName <span>&nbsp</span>}</li>
             }
         </ul>
     </div>
@@ -93,7 +93,7 @@ else
                                 @foreach (var application in detailsSymantecAppBySeverity[item.severity])
                                 {
                                     <tr>
-                                        <td>@application.applicationName</td>
+                                        <td><a href="@(solarWindsLink+application.detailsUrl)" class="link" style="text-decoration: none;">@application.applicationName</a></td>
                                         <td>@application.nodeName</td>
                                         <td>
                                             <div class="accordion-item">
@@ -112,7 +112,7 @@ else
                                                         {
                                                             <span><i class="bi bi-circle-fill"
                                                     style="color:@(statusLayout[component.componentStatus][1])"></i>&nbsp
-                                                                @component.componentName <br /></span>
+                                                               <a href="@(solarWindsLink+component.detailsUrl)" class="link" style="text-decoration: none;"> @component.componentName </a><br /></span>
                                                         }
                                                     </div>
                                                 </div>
@@ -155,7 +155,7 @@ else
                                 @foreach (var application in detailsVeeamAppBySeverity[item.severity])
                                 {
                                     <tr>
-                                        <td>@application.applicationName</td>
+                                        <td><a href="@(solarWindsLink+application.detailsUrl)" class="link" style="text-decoration: none;">@application.applicationName</a></td>
                                         <td>@application.nodeName</td>
                                         <td>
                                             <div class="accordion-item">
@@ -174,7 +174,7 @@ else
                                                         {
                                                             <span><i class="bi bi-circle-fill"
                                                     style="color:@(statusLayout[component.componentStatus][1])"></i>&nbsp
-                                                                @component.componentName <br /></span>
+                                                                <a href="@(solarWindsLink+component.detailsUrl)" class="link" style="text-decoration: none;">@component.componentName</a><br /></span>
                                                         }
                                                     </div>
                                                 </div>
@@ -193,6 +193,7 @@ else
 }
 
 @code {
+    private string solarWindsLink = "http://supervision.cloudrbi.com";
     private List<Overview> overviewSymantec;
     private List<Overview> overviewVeeam;
     private List<Overview> overviewNode;
@@ -205,8 +206,8 @@ else
 {27, new List<string>{"disabled","grey"}}
 };
     private Dictionary<int, List<DetailsNode>> detailsNodeBySeverity = new Dictionary<int, List<DetailsNode>>();
-    private Dictionary<int, List<string>> categoryByHardwareInfo = new Dictionary<int, List<string>>();
-    List<List<object>> hardwareInfoByNode = new List<List<object>>();
+    private Dictionary<int, List<DysfunctionalHardware>> categoryByHardwareInfo = new Dictionary<int, List<DysfunctionalHardware>>();
+    List<DysfunctionalHardware> hardwareInfoByNode = new List<DysfunctionalHardware>();
     Dictionary<int, List<DetailsAPM>> detailsSymantecAppBySeverity = new Dictionary<int, List<DetailsAPM>>();
     Dictionary<int, List<DetailsAPM>> detailsVeeamAppBySeverity = new Dictionary<int, List<DetailsAPM>>();
     Dictionary<int, List<DetailsComponent>> detailsComponentByApp = new Dictionary<int, List<DetailsComponent>>();
@@ -227,12 +228,14 @@ else
         {
             if (categoryByHardwareInfo.ContainsKey(item.hardwareInfoID))
             {
-                categoryByHardwareInfo[item.hardwareInfoID].Add(item.categoryName);
+                categoryByHardwareInfo[item.hardwareInfoID].Add(new DysfunctionalHardware { categoryName = item.categoryName });
             }
             else
             {
-                categoryByHardwareInfo.Add(item.hardwareInfoID, new List<string>() { item.categoryName });
-                hardwareInfoByNode.Add(new List<object>() { item.hardwareInfoID, item.nodeName, item.alertMessage });
+                categoryByHardwareInfo.Add(item.hardwareInfoID, new List<DysfunctionalHardware>() {new DysfunctionalHardware {categoryName = item.categoryName }});
+                hardwareInfoByNode.Add(new DysfunctionalHardware{
+                    hardwareInfoID = item.hardwareInfoID, nodeName = item.nodeName, detailsUrl = item.detailsUrl, alertMessage = item.alertMessage
+                    });
             }
         }
 
